<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="@color/deepskyblue"
	     >
	       <TextView android:id="@+id/vision"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:text="@string/vision"
	            android:textColor="@color/red"
	            android:textStyle="bold"
	            />
	          <TextView android:id="@+id/visiontext"
	            android:layout_below="@+id/vision"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/vision_text"
	            android:textColor="@color/white"
	            android:textStyle="bold"
	            />
	             <TextView android:id="@+id/mission"
	            android:layout_below="@+id/visiontext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mission"
	            android:textColor="@color/red"
	            android:textStyle="bold"
	            />
	                <TextView android:id="@+id/missiontext"
	                    android:layout_below="@+id/mission"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mission_text"
	            android:textColor="@color/white"
	            android:textStyle="bold"
	            />
	                   <TextView android:id="@+id/values"
	            android:layout_below="@+id/missiontext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/values"
	            android:textColor="@color/red"
	            android:textStyle="bold"
	            />
	                    <TextView android:id="@+id/valuestext"
	            android:layout_below="@+id/values"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/values_text"
	            android:textColor="@color/white"
	            android:textStyle="bold"
	            />
	                    <TextView android:id="@+id/contactus"
	                        android:layout_height="wrap_content"
	                        android:layout_width="wrap_content"
	                        android:layout_below="@+id/valuestext"
	                        android:text="@string/contact_us"
	                        android:textColor="@color/red"
	                        android:textStyle="bold"
	                        />
				<Button android:id="@+id/backButton" 
				    android:text="@string/back_to_main"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/contactus"
				    android:layout_alignParentBottom="true"
				    android:textStyle="bold"
				    android:textColor="@color/black"
				    />
				<Button android:id="@+id/disclaimerBtn"
				    android:text="@string/disclaimer"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_alignParentBottom="true"
				    android:layout_toRightOf="@+id/backButton"
				    android:textStyle="bold"
				    android:textColor="@color/black"
				    />
	</RelativeLayout>
</ScrollView>